deployment/infra/nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 20%
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: johnliutw/laravel-devops-nginx:20f803b6d0343442e42364ef408e65da5fce92c0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "16Mi"
          livenessProbe:
            httpGet:
              path: /posts
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 30
            failureThreshold: 2
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /posts
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 1
            timeoutSeconds: 3
          ports:
            - containerPort: 80
